package com.solarease.enums;

public enum InstallerFieldStatus {
    EN_DEPLACEMENT,
    SUR_SITE,
    EN_INSTALLATION,
    EN_PAUSE,
    FIN_CHANTIER,
    BLOCAGE
}
